--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+body {
+    background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+    height: 100vh;
+
+}  
 .content {
     display: flex;
     align-items: center;
@@ -14,13 +19,81 @@
 
 .join {
     display: flex;
+    justify-content: flex-start;
     flex-direction: row;
     width: 100%;
+    height: 21.2px;
 }
 
 .create-btn {
     width: 100%;
+    background-color: #3b5b7450;
+    border: 1px solid #3b5b7450;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    outline: none;
+    outline: 0;
+    padding: 10px 25px;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    height: 25.2px;
 }
+    
+.create-btn:hover {
+    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+    transform: translateY(-2px);
+}
+
+@media (min-width: 768px) {
+    .create-btn {
+      padding: 2px 30px;
+  }
+}
+
+.join-btn {
+    width: 100%;
+    background-color: #3b5b7450;
+    border: 1px solid #3b5b7450;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    outline: none;
+    outline: 0;
+    padding: 10px 25px;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+    
+.join-btn:hover {
+    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+    transform: translateY(-2px);
+}
+
+@media (min-width: 768px) {
+    .join-btn {
+      padding: 2px 30px;
+  }
+}
+
 
 .message-box {
     border-color: black;
@@ -67,3 +140,19 @@ h2 {
     font-size: 10px;
     color: darkgray;
 }
+
+.text {
+    clear: both;
+    padding: 5px;
+  }
+  
+  .left {
+    float: left;
+    background-color: #e5e5ea;
+  }
+  
+  .right {
+    float: right;
+    background-color: #007bff;
+    color: #fff;
+  }
