--- a/templates/room.html
+++ b/templates/room.html
@@ -20,9 +20,10 @@
 
   const messages = document.getElementById("messages");
 
-  const createMessage = (name, msg) => {
+  const createMessage = (name, msg, isMine) => {
+    const positionClass = isMine ? "right":"left";
     const content = `
-    <div class="text">
+    <div class="text ${positionClass}">
         <span>
             <strong>${name}</strong>: ${msg}
         </span>
@@ -35,15 +36,35 @@
   };
 
   socketio.on("message", (data) => {
-    createMessage(data.name, data.message);
-  });
+    createMessage(data.name, data.message, data.isMine);
+  });
+
 
   const sendMessage = () => {
     const message = document.getElementById("message");
-    if (message.value == "") return;
-    socketio.emit("message", { data: message.value });
-    message.value = "";
-  };
+    const enterKey = 13;
+    if (message.value!== "") {
+        socketio.emit("message", { data: message.value, isMine: true});
+        message.value = "";
+    }
+
+    message.addEventListener("keydown", (event) => {
+        if (event.keyCode === enterKey) {
+            if (message.value == "") return;
+            socketio.emit("message", { data: message.value, isMine: true});
+            message.value = "";
+    
+        }
+    });
+
+    const sendButton = document.getElementById("send-btn");
+    sendButton.addEventListener("click", () => {
+        if (message.value == "") return;
+        socketio.emit("message", { data: message.value, isMine: true});
+        message.value = "";
+
+    });
+};
 </script>
 {% for msg in messages %}
 <script type="text/javascript">
